# common-npm

./: .gitignore  .gitlab-ci.yml  .start.sh  NOTES.md  Taskfile.yml  bash.sh  common.app.json  common.cli.json  common.config.json  common.library.json  esbuild.bundled.js  esbuild.minified.js  nodemon-jest.json  package-lock.json  package.app.json.handlebars  package.cli.json.handlebars  package.json  package.json.bak  package.library.json.handlebars  pnpm-lock.yaml  pyproject.toml  test.json  tsconfig.json  tsconfig.module.json  typedoc.json  update.sh  variables.app.json  variables.cli.json  variables.json  variables.library.json
.common/: Taskfile.yml  package.hbs.json  package.json
.common-app/: .gitlab-ci.yml  package.hbs.json  package.json
.common-app/.config/: variables.json
.common-app/src/: app.module.ts
.common-cli/: .gitlab-ci.yml  package.hbs.json  package.json
.common-cli/.config/: variables.json
.common-config/: package.hbs.json  package.json
.common-config/.config/: variables.json
.common-library/: package.hbs.json  package.json
.common-library/.config/: variables.json
.common-plugin/: package.hbs.json  package.json
.common-plugin/.config/: variables.json
.common/.config/: variables.json
.config/: eslintcache  package-lock.json
.config/docs/: Taskfile.yml  common.json  package.json  pyproject.toml  variables.json
_generated_/app/: .gitlab-ci.yml  package.hbs.json  package.json  package.json.liquid
_generated_/cli/: .gitlab-ci.yml  package.hbs.json  package.json  package.json.liquid
_generated_/common/: .gitlab-ci.yml  Taskfile.yml  package.hbs.json  package.json  package.json.liquid
_generated_/config/: package.hbs.json  package.json  package.json.liquid
_generated_/misc/: package.json.liquid
common/: Taskfile.yml  package.hbs.json  package.json  pyproject.toml
common-app/: package.hbs.json
common-cli/: package.hbs.json
common-config/: package.hbs.json
common-library/: package.hbs.json
common-plugin/: package.hbs.json
docs/: variables.json
files/: .eslintrc  .gitignore  .gitlab-ci.yml  .lintstagedrc  .nycrc  ava.config.js  package.json
files-app/: .start.sh  package.json.handlebars
files-cli/: .gitlab-ci.yml  .start.sh  Taskfile.yml  package.json.handlebars  tsconfig.build.json  tsconfig.json
files-library/: .esprintrc  .gitlab-ci.yml  .start.sh  Taskfile.yml  package.json.handlebars  tsconfig.json  tsconfig.module.json
local/: package-lock.json
project/: .gitlab-ci.yml  package.hbs.json  package.json.liquid  tsconfig.build.json
project-app/: .gitlab-ci.yml  package.hbs.json  tsconfig.build.json
project-cli/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
project-config/: package.hbs.json  package.json.liquid
project-docusaurus/: package.json.liquid
project-library/: .gitlab-ci.yml  package.hbs.json  package.json.liquid
project-misc/: package.json.liquid
project-plugin/: package.hbs.json  package.json.liquid
project-scoop/: package.json.liquid
project-tap/: package.json.liquid
taskfiles-cli/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-lint.yml
taskfiles-library/: Taskfile-build.yml  Taskfile-common.yml  Taskfile-lint.yml  Taskfile-test.yml
(+2143 files in other folders)
